Добавление функциональности удаления фильма, пользователя