@@ -34,7 +34,7 @@ public class JdbcUserRepository implements UserRepository {
                 )
         );
 
-        return users.isEmpty() ? Optional.empty() : Optional.of(users.get(0));
+        return users.isEmpty() ? Optional.empty() : Optional.of(users.getFirst());
     }
 
     @Override
@@ -101,6 +101,19 @@ public class JdbcUserRepository implements UserRepository {
         return getUserById(user.getId());
 
 
+    }
+
+    // Удаление пользователя по id
+    @Override
+    public boolean deleteUser(int id) {
+        jdbc.update("DELETE FROM LIKES WHERE USER_ID = :id",
+                new MapSqlParameterSource("id", id));
+
+        jdbc.update("DELETE FROM FRIENDS WHERE USER_ID = :id OR FRIEND_ID = :id",
+                new MapSqlParameterSource("id", id));
+
+        return jdbc.update("DELETE FROM USERS WHERE USER_ID = :id",
+                new MapSqlParameterSource("id", id)) > 0;
     }
 
     @Override
